@@ -1,6 +1,4 @@
 usr/share/aclocal
 usr/include
-usr/lib/*/libasound.a
 usr/lib/*/libasound.so
-usr/lib/*/libasound.la
 usr/lib/*/pkgconfig
